--- a/libray_apply/index.html
+++ b/libray_apply/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
+    <link href="node_modules/gridstack/dist/gridstack.min.css" rel="stylesheet"/>
+    <script src="node_modules/gridstack/dist/gridstack-all.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>localhost:5174</title>
 </head>
